--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.rural.workers.user">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.RuralWorkers.NoActionBar">
+        <activity android:name=".activity.WorkerRegisterActivity"></activity>
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/AD_APPLICATION_ID" />
+
+        <activity android:name=".activity.SupportActivity" />
+        <activity android:name=".activity.WorkerListActivity" />
+        <activity android:name=".activity.JobCategoryActivity" />
+        <activity android:name=".activity.WorkerDetailActivity" />
+        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".activity.LoginActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.SplashActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication.NoActionBar">
+            android:theme="@style/Theme.RuralWorkers.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
