--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,10 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-ads:20.4.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.romandanylyk:pageindicatorview:1.0.2'
+
 }
