--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/app_logo"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.RuralWorkers.NoActionBar">
-        <activity android:name=".activity.WorkerRegisterActivity"></activity>
+
+        <activity android:name=".activity.ProfileActivity"/>
+        <activity android:name=".activity.WorkerRegisterActivity" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
